daemon/build_output.txt
   Compiling comp-daemon v0.1.0 (E:\dev\comP\daemon)
warning: unused import: `anyhow`
 --> src\indexer\mod.rs:9:22
  |
9 | use anyhow::{Result, anyhow};
  |                      ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Language`
  --> src\indexer\parser.rs:15:19
   |
15 | use tree_sitter::{Language, Parser as TreeSitterParser};
   |                   ^^^^^^^^

warning: unused import: `serde_json::Value`
  --> src\indexer\doc_parser.rs:13:5
   |
13 | use serde_json::Value;
   |     ^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
  --> src\indexer\doc_parser.rs:14:5
   |
14 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `WalkerResult`
  --> src\indexer\mod.rs:17:55
   |
17 | pub use walker::{FileWalker, FileEntry, WalkerConfig, WalkerResult};
   |                                                       ^^^^^^^^^^^^

warning: unused imports: `SymbolKind` and `Symbol`
  --> src\indexer\mod.rs:18:30
   |
18 | pub use parser::{CodeParser, Symbol, SymbolKind};
   |                              ^^^^^^  ^^^^^^^^^^

warning: unused import: `crate::AppState`
  --> src\ipc\mod.rs:11:5
   |
11 | use crate::AppState;
   |     ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src\indexer\doc_parser.rs:102:20
    |
102 |             if let Some(level) = line.len() - line.trim_start_matches('#').len() {
    |                    ^^^^^^^^^^^   ----------------------------------------------- this expression has type `usize`
    |                    |
    |                    expected `usize`, found `Option<_>`
    |
    = note: expected type `usize`
               found enum `Option<_>`

warning: unused variable: `language`
  --> src\indexer\parser.rs:79:40
   |
79 |     pub async fn parse_file(&mut self, language: &str, source_code: &str) -> Result<Vec<Symbol>> {
   |                                        ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_language`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `source_code`
  --> src\indexer\parser.rs:79:56
   |
79 |     pub async fn parse_file(&mut self, language: &str, source_code: &str) -> Result<Vec<Symbol>> {
   |                                                        ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_source_code`

warning: unused variable: `language`
  --> src\indexer\parser.rs:96:9
   |
96 |         language: &str,
   |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_language`

warning: unused variable: `source_code`
  --> src\indexer\parser.rs:97:9
   |
97 |         source_code: &str,
   |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_source_code`

warning: unused variable: `content`
  --> src\indexer\doc_parser.rs:35:23
   |
35 |     pub fn parse_json(content: &str) -> Result<Vec<Symbol>> {
   |                       ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_content`

warning: unused variable: `content`
  --> src\indexer\doc_parser.rs:47:24
   |
47 |     pub fn parse_jsonl(content: &str) -> Result<Vec<Symbol>> {
   |                        ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_content`

warning: unused variable: `content`
  --> src\indexer\doc_parser.rs:70:22
   |
70 |     pub fn parse_xml(content: &str) -> Result<Vec<Symbol>> {
   |                      ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_content`

warning: unused variable: `symbols`
  --> src\search\mod.rs:51:35
   |
51 |     pub fn build_index(&mut self, symbols: &[(String, String, String, u32)]) -> Result<()> {
   |                                   ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_symbols`

warning: unused variable: `query`
  --> src\search\mod.rs:68:26
   |
68 |     pub fn search(&self, query: &str, limit: usize) -> Result<Vec<SearchResult>> {
   |                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_query`

warning: unused variable: `limit`
  --> src\search\mod.rs:68:39
   |
68 |     pub fn search(&self, query: &str, limit: usize) -> Result<Vec<SearchResult>> {
   |                                       ^^^^^ help: if this is intentional, prefix it with an underscore: `_limit`

warning: unused variable: `symbol_id`
   --> src\search\mod.rs:100:9
    |
100 |         symbol_id: i64,
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_symbol_id`

warning: unused variable: `dependents`
   --> src\search\mod.rs:101:9
    |
101 |         dependents: &HashMap<i64, Vec<i64>>,
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_dependents`

warning: unused variable: `symbol_map`
   --> src\search\mod.rs:102:9
    |
102 |         symbol_map: &HashMap<i64, (String, String)>, // id -> (name, file)
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_symbol_map`

For more information about this error, try `rustc --explain E0308`.
warning: `comp-daemon` (bin "comp-daemon") generated 20 warnings
error: could not compile `comp-daemon` (bin "comp-daemon") due to 1 previous error; 20 warnings emitted
